--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>you have been hackedd</title>
+    <title>pop up message</title>
     <script type="text/javascript">
         // Function to show the popup message
         function showPopup() {
-            alert("This is a pop-up message!");
+            alert("you have been hacked!");
         }
     </script>
 </head>
